; ModuleID = '/home/carl/AnghaBench/mongoose/examples/NXP_K64/extr_main.c_gpio_init.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/NXP_K64/extr_main.c_gpio_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCLOCK_PortA = common dso_local global i32 0, align 4
@kCLOCK_PortB = common dso_local global i32 0, align 4
@kCLOCK_PortE = common dso_local global i32 0, align 4
@BOARD_LED_RED_GPIO_PORT = common dso_local global i32 0, align 4
@BOARD_LED_RED_GPIO_PIN = common dso_local global i32 0, align 4
@kPORT_MuxAsGpio = common dso_local global i32 0, align 4
@BOARD_LED_GREEN_GPIO_PORT = common dso_local global i32 0, align 4
@BOARD_LED_GREEN_GPIO_PIN = common dso_local global i32 0, align 4
@BOARD_LED_BLUE_GPIO_PORT = common dso_local global i32 0, align 4
@BOARD_LED_BLUE_GPIO_PIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gpio_init() #0 {
  %1 = load i32, i32* @kCLOCK_PortA, align 4
  %2 = call i32 @CLOCK_EnableClock(i32 %1)
  %3 = load i32, i32* @kCLOCK_PortB, align 4
  %4 = call i32 @CLOCK_EnableClock(i32 %3)
  %5 = load i32, i32* @kCLOCK_PortE, align 4
  %6 = call i32 @CLOCK_EnableClock(i32 %5)
  %7 = load i32, i32* @BOARD_LED_RED_GPIO_PORT, align 4
  %8 = load i32, i32* @BOARD_LED_RED_GPIO_PIN, align 4
  %9 = load i32, i32* @kPORT_MuxAsGpio, align 4
  %10 = call i32 @PORT_SetPinMux(i32 %7, i32 %8, i32 %9)
  %11 = call i32 @LED_RED_INIT(i32 0)
  %12 = load i32, i32* @BOARD_LED_GREEN_GPIO_PORT, align 4
  %13 = load i32, i32* @BOARD_LED_GREEN_GPIO_PIN, align 4
  %14 = load i32, i32* @kPORT_MuxAsGpio, align 4
  %15 = call i32 @PORT_SetPinMux(i32 %12, i32 %13, i32 %14)
  %16 = call i32 @LED_GREEN_INIT(i32 0)
  %17 = load i32, i32* @BOARD_LED_BLUE_GPIO_PORT, align 4
  %18 = load i32, i32* @BOARD_LED_BLUE_GPIO_PIN, align 4
  %19 = load i32, i32* @kPORT_MuxAsGpio, align 4
  %20 = call i32 @PORT_SetPinMux(i32 %17, i32 %18, i32 %19)
  %21 = call i32 @LED_BLUE_INIT(i32 0)
  %22 = call i32 (...) @LED_BLUE_OFF()
  ret void
}

declare dso_local i32 @CLOCK_EnableClock(i32) #1

declare dso_local i32 @PORT_SetPinMux(i32, i32, i32) #1

declare dso_local i32 @LED_RED_INIT(i32) #1

declare dso_local i32 @LED_GREEN_INIT(i32) #1

declare dso_local i32 @LED_BLUE_INIT(i32) #1

declare dso_local i32 @LED_BLUE_OFF(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
